// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<DocumentFragment>
  <div
    class="sc-bdvvtL gowonf"
  >
    Test text
  </div>
</DocumentFragment>
`;

exports[`renders 2`] = `
<DocumentFragment>
  <input
    class="sc-gsDKAQ jJyxYW"
    placeholder="test text"
    value=""
  />
</DocumentFragment>
`;

exports[`renders 3`] = `
<DocumentFragment>
  <textarea
    class="sc-dkPtRN dMlLcC"
    placeholder="test text"
  />
</DocumentFragment>
`;
